# AtmegaLib

./: .bashrc  .gitignore  CMakeLists.txt  README.md
lib/: ACS712.c  ACS712.h  AD8400.h  AD9833.c  AD9833.h  AD9834.c  AD9834.h  AD9850.c  AD9850.h  ADNS2610.c  ADNS2610.h  AUART.c  AUART.h  AtoD.c  AtoD.h  AtoDInline.h  BTN8962.h  BadInt.c  Button.c  Button.h  Comparator.c  Comparator.h  Counter.c  Counter.h  CricketBus.c  CricketBus.h  EEPROM.c  EEPROM.h  ESP8266.c  ESP8266.h  Encoder.c  Encoder.h  Freq.c  Freq.h  GetLine.c  GetLine.h  I2C.c  I2C.h  Limit.c  Limit.h  (+48 more)
src/: CMakeLists.txt  foo.sh
src/atmega/: AUART.c  AUART.h  AtoD.c  AtoD.h  AtoDInline.h  BadInt.c  CMakeLists.txt  Comparator.c  Comparator.h  Counter.c  Counter.h  EEPROM.c  EEPROM.h  Freq.c  Freq.h  I2C.c  I2C.h  PWM.c  PWM.h  PortMacros.h  RegisterMacros.h  Regression.c  Regression.h  SPI.h.orig  SPIInline.h  Serial.c  Serial.h  SerialLong.c  SerialLong.h  Timer.c  Timer.h  TimerB.c  TimerB.h  TimerMS.h  TimerMacros.h  TimerOld.c  TimerOld.h  TimerOld2.h  UART.c  UART.h
src/chips/: ACS712.c  ACS712.h  AD8400.h  AD9833.c  AD9833.h  AD9834.c  AD9834.h  AD9850.c  AD9850.h  ADNS2610.c  ADNS2610.h  BTN8962.h  CMakeLists.txt  ESP8266.c  ESP8266.h  MAX7219-8.h  MAX7219.h  MCP4131.h  MCP4161.h  PAM8403.h  TCD1304.c  TCD1304.h  WS2812.c
src/cmd/: CMakeLists.txt  Digital3PotCmd.c  DigitalLogger.c  DigitalPotCmd.c  ESP8266Cmd.c  I2CCmd.c  MotorCmd.c  PulseGenerator.c  SetOutput.c  SqWaveCmd.c
src/etc/: CMakeLists.txt  CMakeMacros.txt
src/io/: Button.c  Button.h  CMakeLists.txt  CricketBus.c  CricketBus.h  Encoder.c  Encoder.h  Limit.c  Limit.h  Motor.c  Motor.h  MotorPWM.c  MotorPWM.h  Servo.c  Servo.h  SqWave.c  SqWave.h  Stepper.c  Stepper.h  TPDev.c  TPDev.h  ZCross.c  ZCross.h
src/screen/: CMakeLists.txt  Command.c  Command.h  CustomScreens.c  CustomScreens.h  DEScreen.c  DEScreen.h  Debug.c  Debug.h  Dump.c  Dump.h  EEScreen.c  EEScreen.h  GetLine.c  GetLine.h  HEScreen.c  HEScreen.h  MAScreen.c  MAScreen.h  MEScreen.c  MEScreen.h  Parse.c  Parse.h  Parse2ch.c  Parse2ch.h  Screen.c  Screen.h  Screen.h.orig  VT100.h
src/templates/: CMakeLists.txt  MAScreen.c
src/test/: AD9834Test.c  ADNS2610Test.c  AUARTTest.c  AtoDTest.c  BlinkLED.c  ButtonTest.c  CMakeLists.txt  ComparatorTest.c  CounterTest.c  CricketLEDTest.c  DigitalPotTest.c  EncoderTest.c  LimitTest.c  MAX7219Test.c  MotorPWMCmd.c  MotorPWMTest.c  MotorTest.c  PortMonitor.c  SerialTest.c  ServoCmd.c  ServoTest.c  StepperPulse.c  StepperTest.c  TPDevTest.c  TimerBTest.c  TimerMSTest.c  TimerTest.c  UARTTest.c  WS2812Test.c  ZCrossTest.c
test/: AD9834Test.c  AUARTTest.c  AtoDTest.c  BlinkLED.c  ButtonTest.c  ComparatorTest.c  CounterTest.c  CricketLEDTest.c  Digital3PotCmd.c  DigitalLogger.c  DigitalPotCmd.c  DigitalPotTest.c  ESP8266Cmd.c  EncoderTest.c  I2CCmd.c  LimitTest.c  MAX7219-8Test.c  MAX7219Test.c  MotorCmd.c  MotorPWMCmd.c  MotorPWMTest.c  MotorTest.c  PortMonitor.c  PulseGenerator.c  SerialTest.c  ServoCmd.c  ServoTest.c  SetOutput.c  SqWaveCmd.c  StepperPulse.c  StepperTest.c  TPDevTest.c  TimerBTest.c  TimerMSTest.c  TimerTest.c  UARTTest.c  ZCrossTest.c
